Fix legibility on page text

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     background-position: center;
     color: rgb(247, 8, 60);
 }
+#showcase p {
+    background-color: rgba(247, 8, 60, 0.7);
+    border-radius: 15%;
+}
 @media (max-width: 768px) {
     #showcase {
         padding: 0 100px;
